fix(psalm): Fix array syntaxes
